Fixed x-overflow

--- a/style.css
+++ b/style.css
@@ -489,7 +489,7 @@ nav a{
 }
 
 .art_banner_text{
-    position: relative;
+    position: fixed;
     top: 45%;
     left: 5%;
 }
